change theme option added

--- a/index.html
+++ b/index.html
@@ -22,28 +22,14 @@
                         Typing Speed Test
                     </h1>
                 </div>
-                <!-- <div class="themes">
-                    <form action="">
-                        <select name="" id="select">
-                            <option value="">Themes</option>
-                            <option value="0">dark</option>
-                            <option value="1">8008</option>
-                            <option value="2">80s after dark</option>
-                            <option value="3">9009</option>
-                            <option value="4">aether</option>
-                            <option value="5">alduin</option>
-                            <option value="6">arch</option>
-                            <option value="7">aurora</option>
-                            <option value="8">beach</option>
-                            <option value="9">banto</option>
-                            <option value="10">bingsu</option>
-                            <option value="11">bliss</option>
-                            <option value="12">blue dolphin</option>
-                            <option value="13">blueberry dark</option>
-                        </select>
-                    </form>
+                <div class="themes">
+                    <button class="theme_change" onclick="changeTheme()">
+                        <p>
+                            Change Theme
+                        </p>
+                    </button>
                 </div>
-            </div> -->
+            </div>
             <div class="beginner-and-pro-buttons right">
                 <button class="beginner" onclick="selectBeg()">
                     <p class="beginner_p">
